<resources>
    <!-- Component String -->
    <string name="app_name">My Tasks</string>
    <string name="home_search">Search</string>
    <string name="home_filter">Filter</string>
    <string name="home_sort">Sort</string>
    <string name="task_delete">Delete</string>
    <string name="login_btn">Login</string>
    <string name="collection_users">users</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="attachments">Attachments</string>
    <string name="location">Location</string>
    <!-- Slider drawer String -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="today">Today</string>
    <string name="setting">Setting</string>
    <string name="all_tasks">All tasks</string>
    <string name="past_due">Past_due</string>
    <string name="completed_tasks">Completed</string>
    <string name="add">Add</string>
    <!-- Component hint -->
    <string name="due_date_hint">Due date</string>
    <string name="task_title_hint">task title</string>
    <string name="task_details_hint">Task Details</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="john_doe">ex. John Doe</string>
    <string name="mobile_hint">Mobile</string>
    <string name="mobile_prefix">+966</string>
    <string name="name_hint">Name</string>
    <string name="member_hint">Assign to</string>
    <string name="additional_task_details_hint">Additional task details</string>
    <string name="creation_date_hint">Creation date</string>
    <!-- firebase -->
    <string name="user">Users</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="task">Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="dueDate">DueDate</string>
    <string name="creationDate">CreationDate</string>
    <string name="member">Member</string>
    <string name="tag">Tag</string>
    <string name="priority">priority</string>
    <string name="select_priority">Select Priority</string>
    <string name="high_priority">High</string>
    <string name="medium_priority">Medium</string>
    <string name="low_priority">Low</string>
    <string name="see_more">See More</string>
    <string name="done">Done</string>
    <string name="_1_day_hint">1 day</string>
    <string name="due_on_hint">Due on </string>
    <string name="save_changes">Save Changes</string>
    <string name="mark_complete">Mark Complete</string>
    <string name="mark_incomplete">Mark incomplete</string>
    <string name="a_z"><![CDATA[A -> Z]]></string>
    <string name="z_a"><![CDATA[Z -> A]]></string>
    <string name="date_added">Date Added</string>
    <string name="network_warning">Please check your network and try again</string>
    <string name="email_photo_warning">Make sure an image is uploaded and the email is in a correct format</string>
    <string name="deletion_confirmation_message">Are you sure you want to delete this task?</string>

</resources>