<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/mainActivityGroup"
        android:visible="true">
        <item
            android:id="@+id/home_search_view"
            android:icon="@drawable/ic_search_24"
            android:title="@string/home_search"
            app:actionViewClass="android.widget.SearchView"
            app:showAsAction="always" />
        <item
            android:id="@+id/home_sort_menu"
            android:title="@string/home_sort">
            <menu >
                <item
                    android:id="@+id/alphaAscSort"
                    android:title="@string/a_z" />
                <item
                    android:id="@+id/alphaDescSort"
                    android:title="@string/z_a" />
                <item
                    android:id="@+id/dateAddedAscSort"
                    android:title="@string/date_added" />
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/addTaskActivityGroup"
        android:visible="false">
        <item
            android:id="@+id/view_task_delete"
            android:icon="@drawable/ic_delete_24"
            android:title="@string/task_delete"
            app:showAsAction="always" />
    </group>

</menu>